--- a/Explorer/package.json
+++ b/Explorer/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@fullcalendar/angular": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "fullcalendar": "^6.1.10",
+    "fullcalendar-scheduler": "^6.1.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
