--- a/Explorer/package.json
+++ b/Explorer/package.json
@@ -21,8 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@auth0/angular-jwt": "^5.1.2",
-    "angular-bootstrap-md": "^15.0.0",
-    "ngx-material-timepicker": "^13.1.1",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
