--- a/Explorer/package.json
+++ b/Explorer/package.json
@@ -23,10 +23,8 @@
     "@auth0/angular-jwt": "^5.1.2",
     "@fullcalendar/angular": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
-    "fullcalendar": "^6.1.10",
-    "fullcalendar-scheduler": "^6.1.10",
-    "angular-bootstrap-md": "^15.0.0",
-    "ngx-material-timepicker": "^13.1.1",
+    "@fullcalendar/multimonth": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
