--- a/Explorer/package.json
+++ b/Explorer/package.json
@@ -25,6 +25,7 @@
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/multimonth": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
+    "angularx-qrcode": "^16.0.2",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -36,6 +37,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.8",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
