--- a/Explorer/package.json
+++ b/Explorer/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/multimonth": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
     "angularx-qrcode": "^16.0.2",
+    "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
