--- a/Explorer/package.json
+++ b/Explorer/package.json
@@ -28,7 +28,10 @@
     "angularx-qrcode": "^16.0.2",
     "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
+    "net": "^1.0.2",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -39,6 +42,8 @@
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.8",
     "@types/qrcode": "^1.5.5",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
